--- a/Index.html
+++ b/Index.html
@@ -81,7 +81,7 @@
     <div class="container">
         <!-- Resistans Kalkylator -->
         <div class="calculator">
-            <h3>Beräkna Resistans</h3>
+            <h3>Beräkna Resistanss</h3>
             <div class="form-group">
                 <label for="material-resistance">Material</label>
                 <select id="material-resistance">
